added swagger for compliance-trackers and updated controller to accept relevant body params from the request
