# Servers/swagger.yaml
@@ -265,6 +265,274 @@ paths:
                 error:
                   type: object
 
+  /complianceTrackers:
+    get:
+      tags: [complianceTrackers]
+      security:
+        - JWTAuth: []
+      responses:
+        "200":
+          description: list of all compliance trackers
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: ok
+                  data:
+                    type: array
+                    items:
+                      $ref: "#components/schemas/ComplianceTracker"
+        "204":
+          description: no content to display
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: no content
+                data:
+                  type: object
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: internal server error
+                error:
+                  type: object
+    post:
+      tags: [complianceTrackers]
+      security:
+        - JWTAuth: []
+      requestBody:
+        description: body of the new compliance tracker
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                project_id:
+                  type: integer
+                  example: 1
+                compliance_status:
+                  type: integer
+                  example: 1
+                pending_audits:
+                  type: integer
+                  example: 2
+                completed_assessments:
+                  type: integer
+                  example: 5
+                implemented_controls:
+                  type: integer
+                  example: 10
+        required: true
+      responses:
+        "201":
+          description: created compliance tracker
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: created
+                data:
+                  type: object
+                  $ref: "#components/schemas/ComplianceTracker"
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: internal server error
+                error:
+                  type: object
+        "503":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: service unavailable
+                error:
+                  type: object
+  /complianceTrackers/{id}:
+    get:
+      tags: [complianceTrackers]
+      security:
+        - JWTAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: id of the compliance tracker
+      responses:
+        "200":
+          description: compliance tracker
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: ok
+                  data:
+                    $ref: "#components/schemas/ComplianceTracker"
+        "404":
+          description: no content to display
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: not found
+                data:
+                  type: object
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: internal server error
+                error:
+                  type: object
+    put:
+      tags: [complianceTrackers]
+      security:
+        - JWTAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: id of the compliance tracker
+      requestBody:
+        description: body of the new compliance tracker
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                project_id:
+                  type: integer
+                  example: 1
+                compliance_status:
+                  type: integer
+                  example: 1
+                pending_audits:
+                  type: integer
+                  example: 2
+                completed_assessments:
+                  type: integer
+                  example: 5
+                implemented_controls:
+                  type: integer
+                  example: 10
+        required: true
+      responses:
+        "202":
+          description: compliance tracker
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: accepted
+                  data:
+                    $ref: "#components/schemas/ComplianceTracker"
+        "404":
+          description: no content to display
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: not found
+                data:
+                  type: object
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: internal server error
+                error:
+                  type: object
+    delete:
+      tags: [complianceTrackers]
+      security:
+        - JWTAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: id of the compliance tracker to delete
+      responses:
+        "202":
+          description: compliance tracker
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: accepted
+                  data:
+                    type: boolean
+                    example: true
+        "404":
+          description: no content to display
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: not found
+                data:
+                  type: object
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: internal server error
+                error:
+                  type: object
+
 components:
   securitySchemes:
     JWTAuth:
@@ -288,3 +556,24 @@ components:
         status:
           type: string
           example: "In Progress"
+    ComplianceTracker:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        project_id:
+          type: integer
+          example: 1
+        compliance_status:
+          type: integer
+          example: 1
+        pending_audits:
+          type: integer
+          example: 3
+        completed_assessments:
+          type: integer
+          example: 10
+        implemented_controls:
+          type: integer
+          example: 15
